Bug 442518 - Screen corner activation stopped working for the "Desktop Grid" effect
Summary: Screen corner activation stopped working for the "Desktop Grid" effect
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-desktop-grid (other bugs)
Version First Reported In: 5.22.90
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 442755 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-09-16 12:52 UTC by tromzy
Modified: 2021-09-21 07:29 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tromzy 2021-09-16 12:52:13 UTC
SUMMARY
On Plasma 5.23 beta, in a Wayland session (I haven't tested in X11), on a dual monitor setup, I have set the top left screen corner action to "Show grid desktop". It used to work fine on previous Plasma versions, now it stopped working in the 5.23 beta. Other actions, like "Present windows", work. Setting the "Show grid desktop" to another screen corner does not work either.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 tromzy 2021-09-16 12:53:00 UTC
SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.22.90
KDE Frameworks Version: 5.86
Qt Version: 5.12.15
Comment 2 tromzy 2021-09-16 12:53:46 UTC
I meant Qt Version: 5.15.2
Comment 3 Nate Graham 2021-09-16 18:07:39 UTC
Can reproduce with a single screen on X11
Comment 4 Szymon 2021-09-18 11:50:07 UTC
I agree, the feature stopped working with version 5.23. On xorg as well as wayland. The function itself works "correctly" via a shortcut. 

But, there is a problem with "drawing" windows, they are cut, virtual desktops also. I also noticed a delay when restoring to the desktop. A general performance problem. Sometimes I have to switch the virtual desktop just to "unlock" the desktop restore.

KDE : 5.23
Frameworks : 5.86
QT Version : 5.12.2
Linux : 5.14.5
Distro : Arch
Graphics Platform : Wayland & Xorg.
Comment 5 Kishore Gopalakrishnan 2021-09-19 07:59:19 UTC
Reverting this commit fixes the issue for me: https://invent.kde.org/plasma/kwin/-/commit/0042d2d8c141e914c4a2bd7086e669b11771a78a
Comment 6 Bug Janitor Service 2021-09-20 18:34:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1442
Comment 7 Janet Blackquill 2021-09-20 19:45:32 UTC
Git commit b376f8832f20d69dc8dabe5ce75c87ddde7b7444 by Jan Blackquill.
Committed on 20/09/2021 at 18:34.
Pushed by ngraham into branch 'master'.

Fix desktop grid border activation
FIXED-IN: 5.23

M  +1    -1    src/effects/desktopgrid/desktopgrid.cpp

https://invent.kde.org/plasma/kwin/commit/b376f8832f20d69dc8dabe5ce75c87ddde7b7444
Comment 8 Nate Graham 2021-09-20 19:47:00 UTC
Git commit 72ebe976bf05cfa4a986eecd0e4eaec6de99069e by Nate Graham, on behalf of Jan Blackquill.
Committed on 20/09/2021 at 19:46.
Pushed by ngraham into branch 'Plasma/5.23'.

Fix desktop grid border activation
FIXED-IN: 5.23


(cherry picked from commit b376f8832f20d69dc8dabe5ce75c87ddde7b7444)

M  +1    -1    src/effects/desktopgrid/desktopgrid.cpp

https://invent.kde.org/plasma/kwin/commit/72ebe976bf05cfa4a986eecd0e4eaec6de99069e
Comment 9 Vlad Zahorodnii 2021-09-21 07:29:43 UTC
*** Bug 442755 has been marked as a duplicate of this bug. ***