Fix desktop grid border activation

BUG: 442518
FIXED-IN: 5.23


(cherry picked from commit b376f8832f20d69dc8dabe5ce75c87ddde7b7444)